# sysdig

./: .gitignore  CMakeLists.txt
cmake/modules/: driver.cmake  falcosecurity-libs.cmake
cmake/modules/driver-repo/: CMakeLists.txt
cmake/modules/falcosecurity-libs-repo/: CMakeLists.txt
userspace/falcon_behavior_engine/: CMakeLists.txt  create_pattern.cpp  create_pattern.py  falcon_behavior_engine.cpp  falcon_behavior_engine.h  fbeng.cpp  fbeng.h  ifbeng.cpp  ifbeng.h  logcxx.cpp  logcxx.h  main.cpp
userspace/falcon_behavior_engine/falco_engine/: CMakeLists.txt  evttype_index_ruleset.h  falco_engine.cpp  falco_engine.h  falco_utils.cpp  filter_ruleset.h  main.cpp  rule_loader.h  rule_loader_reader.cpp  rule_loader_reader.h
userspace/falcon_behavior_engine/python/: setup.py  test.py
userspace/falcon_behavior_engine/python/pyfbeng/: fbeng.py
userspace/falcon_behavior_engine/rules/: Account Manipulation in SSH.lua  Archive and compression activity.lua  Delete self.lua  Directory traversal monitored file read.lua  Drop new file.lua  Gafgyt rule.lua  IP and Port scan.lua  Network activity monitor.lua  Obtain system resource limits.lua  Read self.lua  Suspicious outbound connections.lua  System file activity monitor.lua  System sensitive operation.lua  basic_rule.lua  compress  custom_rules.yaml  falco_1.yaml  falco_rules.yaml  falco_sandbox_rules.yaml  rules_conf.json  rules_conf_att&ck.json  rules_list.json  sig_map.json  susipcious_connect.lua
userspace/falcon_behavior_engine/tests/: test_001.c  test_002.c  test_003.c  test_200.c  test_206.c
userspace/sysdig/: CMakeLists.txt  falcon_behavior_engine.cpp  falcon_behavior_engine.h  main.cpp  sysdig.cpp
userspace/sysdig/utils/: sinsp_opener.cpp  sinsp_opener.h
